<resources>

    <string name="app_name">CarHub Mobile</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">CarHub Mobile</string>
    <string name="zipcodehint">Zip Code</string>
    <string name="pricehint">Enter a new price.</string>
    <string name="search">Search</string>
    <string name="fueltype">Fuel Type:</string>
    <string name="gasPrices">Gas Prices</string>
    <string name="about">About</string>
    <string name="findNearbyGasPrices">Find Nearby Gas Prices</string>
    <string name="fuelType">Fuel Type: </string>
    <string name="distance">Distance: </string>
    <string name="sortBy">Sort By: </string>
    <string name="station">Station: </string>
    <string name="results">Results</string>
    <string name="address">Address: </string>
    <string name="price">Price: </string>
    <string name="updatePrice">Update Price</string>
    <string name="useCurrentLocation">Use Current Location</string>
    <string name="settings">Settings</string>
    <string name="costCalculator">Cost Calculator</string>
    <string name="menu">Menu</string>
    <string name="aboutInformation">This application uses the information from myGasFeed.com to display nearby gas price information. Users will have the option to search by their current location or enter a zip code. The application will get information about nearby gas prices based on the input.\n\nComing soon - view, add and modify vehicle data stored on http://www.carhub.us!</string>
    <string name="howTo">How To</string>
    <string name="howToInformation">To use this application please select the Find Nearby Gas Prices from the main menu. By clicking on the Android menu button a user will be able to change their search options. To search for nearby gas prices select the Find Stations button. A table will be shown with the station information.</string>
    <string name="noGasPrices">No gas prices available</string>
    <string name="navigate">Navigate</string>
    <string name="viewMap">View Map</string>

    <string-array name="fueltype_array">
        <item>Reg</item>
        <item>Mid</item>
        <item>Pre</item>
        <item>Diesel</item>
    </string-array>
    <string-array name="distance_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string-array name="sort_array">
        <item>Price</item>
        <item>Distance</item>
    </string-array>

</resources>