<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:stretchColumns="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/settings"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableRow>

            <TextView
                android:id="@+id/fueltype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fuelType"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinnerfueltype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/fueltype_array" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/radius"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinnerradius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/distance_array" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/sortby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sortBy"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinnersortby"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/sort_array"
                android:spinnerMode="dialog" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/useCurrentLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/useCurrentLocation" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/ads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ads go here." />
    </LinearLayout>

</RelativeLayout>