<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@android:color/white" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dip"
        android:gravity="center_horizontal" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:stretchColumns="1" >

            <TableRow>

                <TextView
                    android:id="@+id/stationNameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/station"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/stationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/stationAddressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/address"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/stationAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text=""
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/fueltype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/fuelType"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinnerfueltypeUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:entries="@array/fueltype_array"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/priceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/newPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/pricehint"
                    android:inputType="numberDecimal" >

                    <requestFocus />
                </EditText>
            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/updatePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updatePrice" />
        <Button
            android:id="@+id/gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Navigate" />

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="320dip"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="a150c682a43c4b9"
        ads:loadAdOnCreate="true" />

</RelativeLayout>