<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/menuText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dip"
            android:text="@string/menu"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/gasPrices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:src="@drawable/ic_action_search" />

            <TextView
                android:id="@+id/nearbyGasPricesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/findNearbyGasPrices"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/howTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/howToLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/howTo"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription=""
                android:src="@drawable/ic_dialog_info" />

            <TextView
                android:id="@+id/aboutLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/ads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ads go here." />
    </LinearLayout>

</RelativeLayout>